--- a/package.json
+++ b/package.json
@@ -10,10 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.37",
+    "@langchain/ollama": "^0.1.5",
+    "@mantine/carousel": "^7.16.3",
+    "@mantine/charts": "^7.16.3",
+    "@mantine/code-highlight": "^7.16.3",
+    "@mantine/core": "^7.16.3",
+    "@mantine/dates": "^7.16.3",
+    "@mantine/dropzone": "^7.16.3",
+    "@mantine/form": "^7.16.3",
+    "@mantine/hooks": "^7.16.3",
+    "@mantine/modals": "^7.16.3",
+    "@mantine/notifications": "^7.16.3",
+    "@mantine/nprogress": "^7.16.3",
+    "@mantine/spotlight": "^7.16.3",
+    "@mantine/tiptap": "^7.16.3",
+    "@tiptap/extension-link": "^2.11.5",
+    "@tiptap/pm": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
+    "embla-carousel-react": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "^9.0.3"
+    "react-markdown": "^9.0.3",
+    "recharts": "2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -25,6 +47,9 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "postcss": "^8.5.1",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
